--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Fundo global: azul bem claro */
 html, body, #root {
    height: 100%;
